# progetto_reti_calcolatori_2425

./: README.md  todo.txt
network_monitor/: Dockerfile  README.md  dns_log.json  docker-compose.yml  io_log.json  ip_log.json  ip_proto_log.json  packet_log.json  pyproject.toml  requirements.txt  run-demoattack.sh  run-networkmonitor.sh  todo.txt
network_monitor/demo_attack/: Dockerfile  demo_attack_simulator.py
network_monitor/netsniffer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
network_monitor/server/: Dockerfile  app.js  package-lock.json  package.json
network_monitor/server/public/: index.html  script.js  style.css
network_monitor/sniffer/: __main__.py  analyzer.py  security.py  sniffer.py  socket_client.py  stats.py
network_monitor/sniffer/lib/: config.py  constants.py  exceptions.py  utility.py
